test/expected/set_explicit-ecsu.out
set explicit-ecsu
    ^
5: error: "explicit-ecsu" set option requires =<value>
